example-demo01-bluegreen/svc-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-demo01-canary
spec:
  selector:
    app: example-demo01
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
