example-demo01-bluegreen/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-demo01-vs
spec:
  hosts:
  - example-demo01-stable
  gateways:
  - example-demo-gw
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: example-demo01-canary
        port:
          number: 8080
  - route:
    - destination:
        host: example-demo01-stable
        port:
          number: 8080
